# clipsync

./: .gitignore  Cargo.toml  build.rs  dist-workspace.toml  spacetime.json
.github/: build-setup.yml
.github/workflows/: release.yml
scripts/: xclip-clipsync
server/: Cargo.toml
server/src/: lib.rs
src/: config.rs  crypto.rs  main.rs  payload.rs  protocol.rs
src/cli/: config.rs  copy.rs  devices.rs  install.rs  invite.rs  login.rs  logs.rs  mod.rs  paste.rs  restart.rs  send.rs  setup.rs  signup.rs  status.rs  xclip.rs
src/daemon/: clipboard.rs  mod.rs  socket.rs  spacetime.rs
