[workspace]
members = ["server"]

[package]
name = "clipsync"
version = "0.2.4"
edition = "2024"
description = "Clipboard sync across machines using SpacetimeDB with E2E encryption"
license = "MIT"
repository = "https://github.com/pjtatlow/clipsync"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
age = "0.11"
zstd = "0.13"
image = { version = "0.25", default-features = false, features = ["png"] }
anyhow = "1"
thiserror = "2"
dirs = "6"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
arboard = { version = "3", features = ["wayland-data-control"] }
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
futures = "0.3"
service-manager = "0.7"
libc = "0.2"
spacetimedb-sdk = "2.0"
openssl = { version = "0.10", features = ["vendored"], optional = true }
gethostname = "0.5"
rpassword = "7"
sha2 = "0.10"
