[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.dist]
dist = false

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "2.0"
log = "0.4"
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
password-hash = { version = "0.5", default-features = false }
